kubernetes-deployments/applications/searxng/out.yaml
---
# Source: searxng/charts/databases/charts/dragonfly/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: dragonfly
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: release-name
    app.kubernetes.io/service: dragonfly
    helm.sh/chart: dragonfly-4.1.2
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: dragonfly
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: release-name
---
# Source: searxng/charts/searxng/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: release-name
    app.kubernetes.io/service: searxng
    helm.sh/chart: searxng-3.3.2
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: searxng
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: release-name
---
# Source: searxng/charts/searxng/templates/common.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  labels:
    app.kubernetes.io/component: searxng
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: release-name
    helm.sh/chart: searxng-3.3.2
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: searxng
      app.kubernetes.io/name: release-name
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels: 
        app.kubernetes.io/component: searxng
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: release-name
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext: 
        fsGroup: 977
        runAsNonRoot: true
        runAsUser: 977
        seccompProfile:
          type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      dnsConfig: 
        options:
        - name: ndots
          value: "3"
      affinity: 
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - searxng
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers: 
        - env:
          - name: SEARXNG_BASE_URL
            value: https://search.jsnouff.net/
          - name: SEARXNG_REDIS_URL
            value: redis://dragonfly:6379/0
          - name: SEARXNG_SECRET
            valueFrom:
              secretKeyRef:
                key: key
                name: searxng-secret-key
          image: searxng/searxng:2025.12.4-8c631b92c
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - CHOWN
              - SETGID
              - SETUID
              - DAC_OVERRIDE
              drop:
              - ALL
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
          volumeMounts:
          - mountPath: /etc/searxng
            name: data
      volumes: 
        - emptyDir: {}
          name: data
        - configMap:
            name: searxng-config
          name: searxng-config-files
---
# Source: searxng/charts/databases/charts/dragonfly/templates/common.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dragonfly
  labels:
    app.kubernetes.io/component: dragonfly
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: release-name
    helm.sh/chart: dragonfly-4.1.2
spec:
  revisionHistoryLimit: 3
  replicas: 
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: dragonfly
      app.kubernetes.io/name: release-name
      app.kubernetes.io/instance: release-name
  serviceName: dragonfly
  template:
    metadata:
      labels: 
        app.kubernetes.io/component: dragonfly
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: release-name
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext: 
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - image: ghcr.io/dragonflydb/dragonfly:v1.35.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - /usr/local/bin/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: dragonfly
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - /usr/local/bin/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 25m
              memory: 32Mi
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
          - mountPath: /data
            name: data
      volumes: 
        - emptyDir:
            medium: Memory
            sizeLimit: 500Mi
          name: data
---
# Source: searxng/charts/searxng/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: release-name
    helm.sh/chart: searxng-3.3.2
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/protocol: http
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-security@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.options: traefik-default-tls@kubernetescrd
spec:
  tls:
    - hosts:
        - "search.jsnouff.net"
      secretName: "tls-secret"
  rules:
    - host: "search.jsnouff.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
